# faucet

./: Cargo.toml  Dockerfile.server  config.toml
.github/workflows/: docker.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/contract1/: Cargo.toml  contract1.img  contract1.txt
contracts/contract1/src/: indexer.rs  lib.rs  main.rs
contracts/contract1/src/client/: tx_executor_handler.rs
elf/: contract1
front/: .env  .env.production  bun.lockb  index.html  package.json  vite.config.ts
front/src/: App.css  App.tsx  global.d.ts  main.tsx  vite-env.d.ts
front/src/components/: Leaderboard.css  Leaderboard.tsx  TransactionList.tsx
front/src/hooks/: useConfig.ts
front/src/services/: NodeService.ts  config.ts
front/src/types/: faucet.ts  smt_token.ts
init/: Cargo.toml  README.md
init/src/: main.rs
server/: Cargo.toml
server/src/: app.rs  indexer.rs  init.rs  main.rs  prover.rs  testnet_dump.json
