[workspace]
resolver = "2"
members = ["contracts", "contracts/contract1", "server"]
exclude = ["init"]

[workspace.dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_self_transfer", package = "hyle-contract-sdk" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_self_transfer", default-features = false, package = "hyle-client-sdk" }
hyle-modules = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_self_transfer", package = "hyle-modules" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_self_transfer", default-features = false, package = "hyle-smt-token" }
hyle-hydentity = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_self_transfer", package = "hyle-hydentity" }

contracts = { path = "contracts", default-features = false, package = "contracts" }
contract1 = { path = "contracts/contract1", package = "contract1" }

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
