[package]
name = "init"
edition = "2021"

[dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_token_inputs", package = "hyle-contract-sdk" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_token_inputs", default-features = false, package = "hyle-client-sdk" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_token_inputs", features = [
  "client",
], default-features = false, package = "hyle-smt-token" }
hyle-hydentity = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_token_inputs", features = [
  "client",
], package = "hyle-hydentity" }
hyle-net = { git = "https://github.com/Hyle-org/hyle.git", branch = "fix/smt_token_inputs", features = [
], package = "hyle-net" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = "4.5.28"
