[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["sp1", "rest"] }
hyle-modules = { workspace = true }
contract1 = { workspace = true, features = ["client"] }
contracts = { workspace = true, features = [] }

sp1-sdk = { version = "=5.0.3", default-features = false, features = [
  "network",
] }

axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
hex = "0.4.3"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = "4.5.28"

opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"
prometheus = { version = "0.13.4" }
config = "0.15.11"
serde_json = "1.0.140"
borsh = { version = "1.5.7", features = ["derive"] }
bincode = "1.3.3"
